// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> renders a Select with a caption correctly 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  position: relative;
}

.emotion-3:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-4 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width: 768px) {
  .emotion-4 {
    font-size: 1rem;
  }
}

.emotion-4::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-4::-moz-placeholder {
  color: #989A9C;
}

.emotion-4:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-4::placeholder {
  color: #989A9C;
}

.emotion-4:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-4:disabled {
  background: #F2F2F2;
}

.emotion-4:required {
  box-shadow: none;
}

.emotion-4:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-5 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0 emotion-1"
>
  <div
    className="emotion-2"
  >
    
  </div>
  <div
    className="emotion-3"
  >
    <select
      className="emotion-4"
      id="example"
    >
      <option>
        Some Option
      </option>
    </select>
  </div>
  <span
    className="emotion-5"
    color="palette.red.default"
  >
    I am a caption
  </span>
</div>
`;

exports[`<Select /> renders a Select with a label correctly 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-6 {
  position: relative;
}

.emotion-6:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-7 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width: 768px) {
  .emotion-7 {
    font-size: 1rem;
  }
}

.emotion-7::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-7::-moz-placeholder {
  color: #989A9C;
}

.emotion-7:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-7::placeholder {
  color: #989A9C;
}

.emotion-7:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-7:disabled {
  background: #F2F2F2;
}

.emotion-7:required {
  box-shadow: none;
}

.emotion-7:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="emotion-0 emotion-1"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4 emotion-5"
        htmlFor="example"
      >
        My Select
      </label>
    </div>
  </div>
  <div
    className="emotion-6"
  >
    <select
      className="emotion-7"
      id="example"
    >
      <option>
        Some Option
      </option>
    </select>
  </div>
  
</div>
`;

exports[`<Select /> renders a Select with a labelAside correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-1 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width: 768px) {
  .emotion-1 {
    font-size: 1rem;
  }
}

.emotion-1::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-1::-moz-placeholder {
  color: #989A9C;
}

.emotion-1:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-1::placeholder {
  color: #989A9C;
}

.emotion-1:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-1:disabled {
  background: #F2F2F2;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="emotion-0"
>
  <select
    className="emotion-1"
    id="example"
  >
    <option>
      Some Option
    </option>
  </select>
</div>
`;

exports[`<Select /> renders a large Select correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-1 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  padding: 0.75rem 0.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width: 768px) {
  .emotion-1 {
    font-size: 1rem;
  }
}

.emotion-1::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-1::-moz-placeholder {
  color: #989A9C;
}

.emotion-1:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-1::placeholder {
  color: #989A9C;
}

.emotion-1:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-1:disabled {
  background: #F2F2F2;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="emotion-0"
>
  <select
    className="emotion-1"
    id="example"
  >
    <option>
      Some Option
    </option>
  </select>
</div>
`;

exports[`<Select /> renders an Select correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-1 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width: 768px) {
  .emotion-1 {
    font-size: 1rem;
  }
}

.emotion-1::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-1::-moz-placeholder {
  color: #989A9C;
}

.emotion-1:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-1::placeholder {
  color: #989A9C;
}

.emotion-1:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-1:disabled {
  background: #F2F2F2;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="emotion-0"
>
  <select
    className="emotion-1"
    id="example"
  >
    <option>
      Some Option
    </option>
  </select>
</div>
`;
